--- a/app/base-build.gradle
+++ b/app/base-build.gradle
@@ -4,10 +4,10 @@ apply plugin: 'kotlin-kapt'
 apply from: "$rootDir/app/environment.gradle"
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 31
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 29
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
@@ -33,6 +33,9 @@ android {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
 
+    buildFeatures{
+        viewBinding true
+    }
     
 }
 
