--- a/userlist/src/main/AndroidManifest.xml
+++ b/userlist/src/main/AndroidManifest.xml
@@ -1,16 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
     package="com.picpay.desafio.userlist">
-
-    <uses-permission android:name="android.permission.INTERNET" />
-
-    <application android:theme="@style/AppTheme">
-        <activity android:name="com.picpay.desafio.userlist.presentation.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
 </manifest>
